sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:16: error: ')' expected but '}' found.
  }
  ^AlgCocktailSort1:26: error: Unmatched closing brace '}' ignored here
       }
       ^